infrastructure/kube-sphere/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kubesphere-system
  labels:
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/enforce: privileged
  annotations:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
