infrastructure/kube-sphere/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubesphere-external-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kubesphere.local.fascinated.cc`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
      services:
        - name: ks-console
          port: 80
  tls:
    secretName: fascinated-cc
